force-app/main/default/objects/sc_ext__Error_Log__c/fields/sc_ext__Batch_Scope__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Batch_Scope__c</fullName>
    <label>Batch Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>