force-app/main/default/objects/sc_ext__Error_Log__c/fields/sc_ext__Method_Name__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Method_Name__c</fullName>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>