force-app/main/default/objects/sc_ext__Error_Log__c/fields/sc_ext__Security_Insights_Refresh__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Security_Insights_Refresh__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the Security Insights Refresh which produced this error</description>
    <inlineHelpText>This is a lookup to the Security Insights Refresh which produced this error</inlineHelpText>
    <label>Security Insights Refresh</label>
    <referenceTo>sc_ext__Security_Insights_Refresh__c</referenceTo>
    <relationshipLabel>Error Log</relationshipLabel>
    <relationshipName>Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>