force-app/main/default/objects/sc_ext__Error_Log__c/fields/sc_ext__Shield_Accelerator_Job__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Shield_Accelerator_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shield Accelerator Job</label>
    <referenceTo>sc_ext__Shield_Accelerator_Job__c</referenceTo>
    <relationshipLabel>Error Log</relationshipLabel>
    <relationshipName>Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>