force-app/main/default/objects/sc_ext__Error_Log__c/fields/sc_ext__Wizard__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Wizard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wizard</label>
    <referenceTo>sc_ext__Wizard__c</referenceTo>
    <relationshipName>Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>